--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,3 @@
-MONGODB_URI=mongodb+srv://suwannarat30:auey2547@dht.szx8xbu.mongodb.net/?retryWrites=true&w=majority&appName=dht
+MONGODB_URI=mongodb+srv://webtempdb:Puttharasu24@webtemp.zsolxoc.mongodb.net/?retryWrites=true&w=majority&appName=webtemp
 DB_NAME=dht
 COLLECTION_NAME=logs
