--- a/backend/package.json
+++ b/backend/package.json
@@ -6,8 +6,9 @@
     "start": "node be.js"
   },
   "dependencies": {
-    "express": "^5.1.0",
-    "cors": "^2.8.5",
-    "mongoose": "^7.0.0"
+  "cors": "^2.8.5",
+  "express": "^5.1.0",
+  "mongoose": "^8.18.1",
+  "dotenv": "^16.1.4"
   }
 }
