--- a/backend/package.json
+++ b/backend/package.json
@@ -6,8 +6,9 @@
     "start": "node be.js"
   },
   "dependencies": {
-    "express": "^5.1.0",
     "cors": "^2.8.5",
+    "dotenv": "^17.2.2",
+    "express": "^5.1.0",
     "mongoose": "^7.0.0"
   }
 }
